<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/ic_gallery"
        android:title="@string/title_album" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/title_camera"/>
    <item
        android:id="@+id/navigation_module"
        android:icon="@drawable/ic_module"
        android:title="@string/title_module" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting" />
</menu>