<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_animation"
        android:layout_width="178dp"
        android:layout_height="166dp"
        android:elevation="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_login_illustration"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="@dimen/spacing_32"
        android:alpha="0"
        android:contentDescription="@string/illustration_login"
        android:src="@drawable/illustration_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:alpha="0"
        android:textSize="@dimen/text_size_28"
        android:text="@string/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_illustration"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_login_msg"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_4"
        android:alpha="0"
        android:textSize="@dimen/text_size_12"
        android:text="@string/login_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        tools:alpha="1" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_32"
        android:autofillHints="@string/email"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="@dimen/spacing_6"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_msg"
        tools:alpha="1"
        android:inputType="textEmailAddress" />


    <com.codegeniuses.estetikin.customViews.PasswordEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_16"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email"
        app:passwordToggleEnabled="true"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/dark_green"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"

        android:layout_marginTop="@dimen/spacing_24"
        android:padding="@dimen/spacing_12"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
        tools:alpha="1"
        app:cornerRadius="100dp"/>

    <LinearLayout
        android:id="@+id/ll_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_google_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        tools:alpha="1">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_weight="1"
            android:background="@color/green_500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginEnd="@dimen/spacing_24"
            android:text="@string/or_login_with"
            android:textColor="@color/dark_green" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/spacing_24"
            android:layout_weight="1"
            android:background="@color/green_500" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_google_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/spacing_8"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_login_with"
        tools:alpha="1">

        <ImageView
            android:id="@+id/iv_logo_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/logo_google"
            android:contentDescription="@string/google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_12"
            android:text="@string/login_with_google"
            android:textColor="@color/dark_green" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_8"
        android:padding="@dimen/spacing_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12"
            android:text="@string/new_to_estetikin"
            android:textColor="@color/dark_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_6"
            android:textSize="@dimen/text_size_12"
            android:text="@string/signup"
            android:textColor="@color/pink_500" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
