<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.albumDetail.AlbumDetailFragment">

    <ImageView
        android:id="@+id/iv_back_button"
        android:layout_width="@dimen/spacing_16"
        android:layout_height="@dimen/spacing_16"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_arrow"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:id="@+id/iv_album_photo"
        android:layout_width="370dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/iv_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_24"
        android:src="@drawable/result_placeholder"
        android:contentDescription="@string/album_photo" />

    <TextView
        android:id="@+id/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_album_photo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_12"
        android:textSize="@dimen/text_size_12"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/date_time"/>

    <TextView
        android:id="@+id/tv_recomendation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_time"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="@string/album_recomendation"/>

</androidx.constraintlayout.widget.ConstraintLayout>