<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgetPassword.ForgetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingEnd="@dimen/spacing_8"
        android:paddingStart="@dimen/spacing_24">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="@dimen/spacing_24"
            android:layout_height="@dimen/spacing_20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back_button"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/white"
            android:text="@string/title_back"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toEndOf="@+id/iv_back_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:textColor="?attr/colorTextDark"
        android:fontFamily="@font/opensans_bold"
        android:textSize="@dimen/text_size_16"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_forgot_password_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:textColor="?attr/colorTextDark"
        android:fontFamily="@font/opensans_regular"
        android:textSize="@dimen/text_size_12"
        android:text="@string/forgot_password_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <TextView
        android:id="@+id/tv_enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:textColor="?attr/colorTextDark"
        android:fontFamily="@font/opensans_regular"
        android:textSize="@dimen/text_size_12"
        android:text="@string/enter_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password_description" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_8"
        android:autofillHints="@string/email"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="@dimen/spacing_6"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_40"
        android:padding="@dimen/spacing_12"
        android:fontFamily="@font/opensans_bold"
        android:textColor="@color/white"
        android:text="@string/reset_password"
        android:background="@drawable/button_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email"/>
</androidx.constraintlayout.widget.ConstraintLayout>